--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,4 +1,4 @@
-<!-- Navigation -->
+<!-- header.html -->
     <nav class="navbar navbar-default navbar-fixed-top">
         <div class="container">
             <!-- Brand and toggle get grouped for better mobile display -->
@@ -44,9 +44,9 @@
     <header>
         <div class="container">
             <div class="intro-text">
-                <div class="intro-lead-in">Welcome To Our Studio!</div>
-                <div class="intro-heading">It's Nice To Meet You</div>
-                <a href="#services" class="page-scroll btn btn-xl">Tell Me More</a>
+                <div class="intro-lead-in">Genometra</div>
+                <div class="intro-heading">formacion</div>
+                <a href="#services" class="page-scroll btn btn-xl">Saber mas</a>
             </div>
         </div>
     </header>
